--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.35'
 
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+
     testImplementation 'ch.qos.logback:logback-classic:1.2.10'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
