--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'me.bvn13'
-version '1.2.4'
+version '1.2.5'
 
 repositories {
     mavenCentral()
@@ -34,6 +34,10 @@ tasks.withType(Test).configureEach {
     maxParallelForks = 1
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     repositories {
         maven {
@@ -48,6 +52,13 @@ publishing {
     publications {
         gpr(MavenPublication) {
             from(components.java)
+        }
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact sourceJar {
+                classifier "sources"
+            }
         }
     }
 }
